Added text to README
Added description, how to run, how to setup development environment and licences